--- a/sshkm/templates/sshkm/base.html
+++ b/sshkm/templates/sshkm/base.html
@@ -74,6 +74,15 @@
         {% block content %}{% endblock %}
 
       </div>
+      <footer class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+          <div id="navbar" class="navbar-collapse">
+            <ul class="nav navbar-nav">
+              {% block footer %}{% endblock %}
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="{% static "jquery/jquery.min.js" %}"></script>
