--- a/sshkm/templates/sshkm/key/detail.html
+++ b/sshkm/templates/sshkm/key/detail.html
@@ -11,13 +11,43 @@
           {% bootstrap_field keyform.firstname set_required=False %}
           {% bootstrap_field keyform.lastname set_required=False %}
           {% bootstrap_field keyform.description set_required=False %}
-          {% bootstrap_field keyform.member_of set_required=False %}
+          <div class="form-group">
+            <label class="control-label" for="id_member_of">Member of Group(s)</label>
+            <div class="input-group">
+              <div class="two-select two-select-left">
+                <label class="control-label" for="rightValues">Selected</label>
+                <select id="leftValues" multiple class="form-control" name="member_of">
+                  {% if groups_selected %}
+                  {% for group in groups_selected %}
+                  <option value="{{ group.group.id }}">{{ group.group.name }}</option>
+                  {% endfor %}
+                  {% endif %}
+                </select>
+              </div>
+              <div class="two-select two-select-buttons">
+                <ul class="pagination">
+                  <li><a href="#" id="btnLeft">&laquo;</a></li>
+                  <li><a href="#" id="btnRight">&raquo;</a></li>
+                </ul>
+              </div>
+              <div class="two-select two-select-right">
+                <label class="control-label" for="rightValues">Available</label>
+                <select id="rightValues" multiple class="form-control">
+                  {% if groups_not_selected %}
+                  {% for group in groups_not_selected %}
+                  <option value="{{ group.id }}">{{ group.name }}</option>
+                  {% endfor %}
+                  {% endif %}
+                </select>
+              </div>
+            </div>
+          </div>
           {% bootstrap_field keyform.publickey set_required=False %}
           {% if request.GET.id %}
           <input type="hidden" name="id" value="{{ request.GET.id }}">
           {% endif %}
           {% buttons %}
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default" onclick="selectAll('leftValues');">Submit</button>
           {% endbuttons %}
         </form>
 {% endblock %}
