--- a/sshkm/static/custom.css
+++ b/sshkm/static/custom.css
@@ -105,6 +105,8 @@ a, a.hover, a.focus, a:hover, a:focus {
   background-color: #222222;
   color: #9d9d9d;
   border-color: #adadad;
+  margin-top: -10px;
+  margin-bottom: -14px;
 }
 
 .pagination-nav > li > a:hover,
@@ -120,7 +122,10 @@ a, a.hover, a.focus, a:hover, a:focus {
   color: #9d9d9d;
   background-color: #e6e6e6;
   border-color: #adadad;
+  margin-top: -10px;
+  margin-bottom: -14px;
 }
+
 
 .form-control:focus {
   border-color: #000000;
