--- a/sshkm/templates/sshkm/base.html
+++ b/sshkm/templates/sshkm/base.html
@@ -76,8 +76,8 @@
       </div>
       <footer class="navbar navbar-inverse navbar-fixed-bottom">
         <div class="container">
-          <div id="navbar" class="navbar-collapse">
-            <ul class="nav navbar-nav">
+          <div id="navbar-bottom">
+            <ul class="pagination pagination-nav">
               {% block footer %}{% endblock %}
             </ul>
           </div>
