--- a/sshkm/templates/sshkm/permission/create.html
+++ b/sshkm/templates/sshkm/permission/create.html
@@ -4,13 +4,14 @@
 
 {% block content %}
 {% load bootstrap3 %}
-        <form action="{% url 'PermissionSave' %}" method="post" class="form">
+        <form action="{% url 'PermissionSave' %}" method="post" class="form" name="save">
           {% csrf_token %}
           {% bootstrap_field permissionform.host set_required=False %}
           {% bootstrap_field permissionform.group set_required=False %}
           {% bootstrap_field permissionform.osuser set_required=False %}
-          {% buttons %}
-          <button type="submit" class="btn btn-default">Submit</button>
-          {% endbuttons %}
         </form>
+{% endblock %}
+
+{% block footer %}
+              <li><a href="#" onclick="document.save.submit();">Submit</a></li>
 {% endblock %}
