--- a/sshkm/templates/sshkm/permission/list.html
+++ b/sshkm/templates/sshkm/permission/list.html
@@ -49,7 +49,8 @@
 {% endblock %}
 
 {% block footer %}
-              <li><a href="{% url 'PermissionCreate' %}">New</a></li>
+              <li><a href="{% url 'PermissionCreate' %}">New Permission</a></li>
+{% if permissions %}
               <li><a href="#" onclick="
                 checkboxCheck(
                   function(){
@@ -78,5 +79,5 @@
               <li class="disabled"><span>&raquo;</span></li>
               {% endif %}
           {% endif %}
-
+{% endif %}
 {% endblock %}
