--- a/sshkm/templates/sshkm/base.html
+++ b/sshkm/templates/sshkm/base.html
@@ -12,9 +12,10 @@
 
     <title>{% block headtitle %}SSHKM{% endblock %}</title>
 
-    <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
-    <link href="{% static "bootstrap-dialog/bootstrap-dialog.min.css" %}" rel="stylesheet" type="text/css" />
-    <link href="{% static "custom.css" %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static "datatables/jquery.dataTables.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "bootstrap/css/bootstrap.min.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "bootstrap-dialog/bootstrap-dialog.min.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "custom.css" %}" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,6 +23,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -86,6 +88,7 @@
     </div>
 
     <script src="{% static "jquery/jquery.min.js" %}"></script>
+    <script src="{% static "datatables/jquery.dataTables.js" %}"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
     <script src="{% static "bootstrap-dialog/bootstrap-dialog.min.js" %}"></script>
     <script src="{% static "custom.js" %}"></script>
