--- a/sshkm/templates/sshkm/group/list.html
+++ b/sshkm/templates/sshkm/group/list.html
@@ -6,13 +6,15 @@
 {% if groups %}
         <form role="form" method="post" action="{% url 'GroupDelete' %}" name="deleteMultipleGroups">
           {% csrf_token %}
-          <div class="panel panel-default">
-            <table class="table table-striped table-hover">
+          <table class="DataTable display">
+            <thead>
               <tr>
                 <th><input type="checkbox" class="checkAll"></th>
                 <th>Name</th>
                 <th>&nbsp;</th>
               </tr>
+            </thead>
+            </tbody>
               {% for group in groups %}
               <tr>
                 <td><input type="checkbox" name="id_multiple" id="{{ group.id }}" value="{{ group.id }}"></td>
@@ -35,8 +37,8 @@
                 </td>
               </tr>
               {% endfor %}
-            </table>
-          </div>
+            </tbody>
+          </table>
         </form>
 {% else %}
         <p>No Groups are available.</p>
