--- a/sshkm/templates/sshkm/osuser/list.html
+++ b/sshkm/templates/sshkm/osuser/list.html
@@ -6,13 +6,15 @@
 {% if osusers %}
         <form role="form" method="post" action="{% url 'OsuserDelete' %}" name="deleteMultipleOsusers">
           {% csrf_token %}
-          <div class="panel panel-default">
-            <table class="table table-striped table-hover">
+          <table class="DataTable display">
+            <thead>
               <tr>
                 <th><input type="checkbox" class="checkAll"></th>
                 <th>Name</th>
                 <th>&nbsp;</th>
               </tr>
+            </thead>
+            </tbody>
               {% for osuser in osusers %}
               <tr>
                 <td><input type="checkbox" name="id_multiple" id="{{ osuser.id }}" value="{{ osuser.id }}"></td>
@@ -35,8 +37,8 @@
                 </td>
               </tr>
               {% endfor %}
-            </table>
-          </div>
+            </tbody>
+          </table>
        </form>
 {% else %}
        <p>No Osusers are available.</p>
