--- a/sshkm/templates/sshkm/permission/list.html
+++ b/sshkm/templates/sshkm/permission/list.html
@@ -6,8 +6,8 @@
 {% if permissions %}
         <form role="form" method="post" action="{% url 'PermissionDelete' %}" name="deleteMultiplePermissions">
           {% csrf_token %}
-          <div class="panel panel-default">
-            <table class="table table-striped table-hover">
+          <table class="DataTable display">
+            <thead>
               <tr>
                 <th><input type="checkbox" class="checkAll"></th>
                 <th>Host</th>
@@ -15,6 +15,8 @@
                 <th>OS-User</th>
                 <th>&nbsp;</th>
               </tr>
+            </thead>
+            <tbody>
               {% for permission in permissions %}
               <tr>
                 <td><input type="checkbox" name="id_multiple" id="{{ permission.id }}" value="{{ permission.id }}"></td>
@@ -39,8 +41,8 @@
                 </td>
               </tr>
               {% endfor %}
-            </table>
-          </div>
+            </tbody>
+          </table>
         </form>
 
 {% else %}
