--- a/sshkm/templates/sshkm/permission/list.html
+++ b/sshkm/templates/sshkm/permission/list.html
@@ -1,4 +1,5 @@
 {% extends "sshkm/base.html" %}
+{% load cache %}
 
 {% block title %}Permissions{% endblock %}
 
@@ -17,6 +18,7 @@
               </tr>
             </thead>
             <tbody>
+              {% cache 18000 cache_permissions %}
               {% for permission in permissions %}
               <tr>
                 <td><input type="checkbox" name="id_multiple" id="{{ permission.id }}" value="{{ permission.id }}"></td>
@@ -41,6 +43,7 @@
                 </td>
               </tr>
               {% endfor %}
+              {% endcache %}
             </tbody>
           </table>
         </form>
