--- a/sshkm/static/custom.css
+++ b/sshkm/static/custom.css
@@ -105,8 +105,8 @@ a, a.hover, a.focus, a:hover, a:focus {
   background-color: #222222;
   color: #9d9d9d;
   border-color: #adadad;
-  margin-top: -10px;
-  margin-bottom: -14px;
+  margin-top: -13px;
+  margin-bottom: -17px;
 }
 
 .pagination-nav > li > a:hover,
@@ -122,8 +122,8 @@ a, a.hover, a.focus, a:hover, a:focus {
   color: #9d9d9d;
   background-color: #e6e6e6;
   border-color: #adadad;
-  margin-top: -10px;
-  margin-bottom: -14px;
+  margin-top: -13px;
+  margin-bottom: -17px;
 }
 
 
@@ -168,10 +168,11 @@ select[multiple] option:checked {
   line-height: 30px;
 }
 */
-
+/*
 .dataTables_paginate, .dataTables_length {
     display: none;
 }
+*/
 
 
 /* adapt svg images */
