--- a/sshkm/templates/sshkm/login.html
+++ b/sshkm/templates/sshkm/login.html
@@ -8,5 +8,6 @@
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
           <button class="btn btn-lg btn-default btn-block" type="submit">Sign in</button>
+          <div class="small version">Version: {{ sshkm_version }}</div>
         </form>
 {% endblock %}
