--- a/sshkm/templates/sshkm/settings/list.html
+++ b/sshkm/templates/sshkm/settings/list.html
@@ -66,7 +66,7 @@
         <hr>
         <form action="{% url 'Superuser' %}" method="post" class="form">
           {% csrf_token %}
-          <div class="form-group"><label class="control-label" for="id_superuser">Global Superuser</label><input class="form-control" id="id_superuser" maxlength="200" name="superuser" placeholder="default: root" title="" type="text" value="{{ superuser }}" /></div>
+          <div class="form-group"><label class="control-label" for="id_superuser">Global Superuser (OS-User used to connect to your hosts to deploy all other keys)</label><input class="form-control" id="id_superuser" maxlength="200" name="superuser" placeholder="default: root" title="" type="text" value="{{ superuser }}" /></div>
           <div class="form-group">
           <button type="submit" class="btn btn-default">Submit</button>
           </div>
