--- a/sshkm/templates/sshkm/host/list.html
+++ b/sshkm/templates/sshkm/host/list.html
@@ -28,6 +28,8 @@
                   <span class="glyphicon glyphicon-remove" aria-hidden="true" title="{{host.status}} {{host.last_status}}"></span>
                   {% elif host.status == "PENDING" %}
                   <span class="glyphicon glyphicon-refresh" aria-hidden="true" title="{{host.status}} {{host.last_status}}"></span>
+                  {% elif host.status == "NTD" %}
+                  <span class="glyphicon glyphicon-option-horizontal" aria-hidden="true" title="nothing to deploy {{host.last_status}}"></span>
                   {% else %}
                   &nbsp;
                   {% endif %}
